--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "backend",
-  "version": "1",
+  "version": "0.0.1",
   "description": "backend default boilerplate",
   "author": "Jose Henrique",
   "main": "index.ts",
   "scripts": {
     "start": "tsx .",
-    "dev": "tsx watch .",
+    "dev": "tsnd --respawn -r tsconfig-paths/register .",
+    "tsx": "tsx watch .",
     "test": "tsx watch test"
   },
   "dependencies": {
@@ -59,7 +60,7 @@
     "promise": "^8.3.0",
     "q": "^1.5.1",
     "qs": "^6.11.0",
-    "query-string": "^8.1.0",
+    "query-string": "7.1.3",
     "querystring": "^0.2.1",
     "ramda": "^0.28.0",
     "redis": "3.1.2",
@@ -70,7 +71,6 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.0",
     "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.2",
     "tsx": "^3.12.2",
     "type-fest": "^3.5.2",
@@ -83,6 +83,9 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.20.11",
     "@types/apicache": "^1.6.1",
     "@types/basic-auth": "^1.1.3",
     "@types/bcrypt": "^5.0.0",
@@ -110,6 +113,7 @@
     "nodemailer": "^6.9.0",
     "nodemon": "^2.0.20",
     "ts-essentials": "^9.3.0",
+    "ts-node-dev": "^2.0.0",
     "ts-xor": "^1.0.8",
     "typescript": "^4.9.4",
     "typical": "^7.1.1"
