--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ BASE_URL=http://localhost:4000
 
 # SECURITY
 CORS_ORIGIN=
-PUBLIC_KEY=public123
-PRIVATE_KEY=private123
+APP_KEY_PUBLIC=public123
+APP_KEY_PRIVATE=private123
 
 # DATABASE
 DATABASE_USER=admin
@@ -23,19 +23,21 @@ DB_URL=mongodb://localhost:27017/backend
 REDIS_URL=redis://localhost:6379/0
 
 # CACHE
-APOLLO_CACHE_ENABLE=false
-EXPRESS_CACHE_ENABLE=true
-EXPRESS_CACHE_DEBUG=false
+CACHE_APOLLO_ENABLE=false
+CACHE_EXPRESS_ENABLE=true
+CACHE_EXPRESS_DEBUG=false
 
 # EMAIL
-SENDGRID_API_KEY=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
+SGM_KEY_API=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
 
 NODEMAILER_HOST=smtp.mailtrap.io
 NODEMAILER_PORT=465
-NODEMAILER_AUTH_USER=34868204889d09
-NODEMAILER_AUTH_PASS=ed323ed44d7870
-
+NODEMAILER_USER=34868204889d09
+NODEMAILER_PASS=ed323ed44d7870
 
 # SMS
 NEXMO_KEY_PUBLIC=
 NEXMO_KEY_PRIVATE=
+
+# CLOUD
+DBX_KEY_API=
