--- a/.env
+++ b/.env
@@ -8,7 +8,12 @@ CORS_ORIGIN=
 APP_KEY_PUBLIC=public123
 APP_KEY_PRIVATE=private456
 
-# DATABASE
+
+# ========================== #
+# ======== DATABASE ======== #
+# ========================== #
+
+# RELATIONAL
 DATABASE_USER=admin
 DATABASE_PASS=123456
 DATABASE_HOST=localhost
@@ -16,8 +21,14 @@ DATABASE_PORT=3306
 DATABASE_NAME=backend
 DATABASE_DEBUG=false
 
-# DB
+# JSON
 DB_URL=mongodb://localhost:27017/backend
+
+
+
+# ======================= #
+# ======== CACHE ======== #
+# ======================= #
 
 # REDIS
 REDIS_URL=redis://localhost:6379/0
@@ -26,6 +37,12 @@ REDIS_URL=redis://localhost:6379/0
 CACHE_APOLLO_ENABLE=false
 CACHE_EXPRESS_ENABLE=true
 CACHE_EXPRESS_DEBUG=false
+
+
+
+# ========================== #
+# ======== SERVICES ======== #
+# ========================== #
 
 # EMAIL
 SGM_KEY_API=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
@@ -39,5 +56,18 @@ NODEMAILER_PASS=ed323ed44d7870
 NEXMO_KEY_PUBLIC=
 NEXMO_KEY_PRIVATE=
 
-# CLOUD
+
+# ========================= #
+# ======== STORAGE ======== #
+# ========================= #
+
+# DROPBOX
 DBX_KEY_API=
+
+# AMAZON
+S3_ID=AKIA225TBTOKLNBH2OYF
+S3_KEY=y6hrC9i3TI+R3y399TZRHhnocqh3cgrvRWjoho+s
+S3_BUCKET=MyBucket
+S3_REGION=us-east-2
+
+
