--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^2.29.3",
     "diacritics": "^1.3.0",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-bearer-token": "^2.4.0",
     "express-jwt": "^8.3.0",
@@ -97,6 +98,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/diacritics": "^1.3.1",
+    "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.15",
     "@types/formidable": "^2.0.5",
     "@types/jsonwebtoken": "^9.0.1",
