--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@keyv/redis": "^2.5.4",
     "@prisma/client": "^4.8.1",
     "@sendgrid/mail": "^7.7.0",
+    "ajv": "^8.12.0",
     "apicache": "^1.6.3",
     "axios": "^1.2.2",
     "basic-auth": "^2.0.1",
@@ -43,6 +44,7 @@
     "graphql-tag": "^2.12.6",
     "graphql-tools": "^8.3.15",
     "helmet": "^6.0.1",
+    "joi": "^17.7.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.0",
     "keyv": "^4.5.2",
@@ -71,6 +73,7 @@
     "serve-favicon": "^2.5.0",
     "stream": "^0.0.2",
     "stream-chain": "^2.2.5",
+    "superstruct": "^1.0.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.0",
     "tldts": "^5.7.104",
@@ -84,6 +87,7 @@
     "uuid": "^9.0.0",
     "validator": "^13.7.0",
     "yaml": "^2.2.1",
+    "yup": "^0.32.11",
     "zod": "^3.20.2"
   },
   "devDependencies": {
@@ -100,6 +104,7 @@
     "@types/diacritics": "^1.3.1",
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.15",
+    "@types/express-ejs-layouts": "^2.5.0",
     "@types/formidable": "^2.0.5",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.191",
