--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.20.1",
     "bson-objectid": "^2.0.4",
     "chance": "^1.1.9",
+    "cheerio": "^1.0.0-rc.12",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
