--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@keyv/redis": "^2.5.4",
     "@prisma/client": "^4.8.1",
     "@sendgrid/mail": "^7.7.0",
-    "ajv": "^8.12.0",
     "apicache": "^1.6.3",
     "axios": "^1.2.2",
     "basic-auth": "^2.0.1",
@@ -36,6 +35,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-bearer-token": "^2.4.0",
+    "express-dart-sass": "^1.0.4",
     "express-jwt": "^8.3.0",
     "express-validator": "^6.14.2",
     "formidable": "^2.1.1",
@@ -45,7 +45,6 @@
     "graphql-tag": "^2.12.6",
     "graphql-tools": "^8.3.15",
     "helmet": "^6.0.1",
-    "joi": "^17.7.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.0",
     "keyv": "^4.5.2",
@@ -74,7 +73,6 @@
     "serve-favicon": "^2.5.0",
     "stream": "^0.0.2",
     "stream-chain": "^2.2.5",
-    "superstruct": "^1.0.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.0",
     "tldts": "^5.7.104",
@@ -87,9 +85,7 @@
     "universal-cookie-express": "^4.0.3",
     "uuid": "^9.0.0",
     "validator": "^13.7.0",
-    "yaml": "^2.2.1",
-    "yup": "^0.32.11",
-    "zod": "^3.20.2"
+    "yaml": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
