--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "graphql-tag": "^2.12.6",
     "graphql-tools": "^8.3.15",
     "helmet": "^6.0.1",
+    "http-errors": "^2.0.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.0",
     "keyv": "^4.5.2",
@@ -103,6 +104,8 @@
     "@types/express": "^4.17.15",
     "@types/express-ejs-layouts": "^2.5.0",
     "@types/formidable": "^2.0.5",
+    "@types/fs-extra": "^11.0.1",
+    "@types/http-errors": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.191",
     "@types/mime-types": "^2.1.1",
@@ -119,6 +122,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@types/underscore": "^1.11.4",
     "@types/uuid": "^9.0.0",
+    "@types/validator": "^13.7.11",
     "nodemailer": "^6.9.0",
     "nodemon": "^2.0.20",
     "ts-essentials": "^9.3.0",
