--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "graphql-tools": "^8.3.15",
     "helmet": "^6.0.1",
     "http-errors": "^2.0.0",
+    "inversify": "^6.0.1",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.0",
     "keyv": "^4.5.2",
@@ -71,6 +72,7 @@
     "random": "^4.1.0",
     "randomatic": "^3.1.1",
     "redis": "3.1.2",
+    "reflect-metadata": "^0.1.13",
     "serve-favicon": "^2.5.0",
     "stream": "^0.0.2",
     "stream-chain": "^2.2.5",
