--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
     "universal-cookie-express": "^4.0.3",
     "uuid": "^9.0.0",
     "validator": "^13.7.0",
-    "yaml": "^2.2.1"
+    "yaml": "^2.2.1",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
