--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "redis": "3.1.2",
     "reflect-metadata": "^0.1.13",
     "serve-favicon": "^2.5.0",
+    "sqlite3": "^5.1.4",
     "stream": "^0.0.2",
     "stream-chain": "^2.2.5",
     "swagger-jsdoc": "^6.2.8",
