--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+# ====================== #
+# ======== MAIN ======== #
+# ====================== #
+
 # SERVER
 NODE_ENV=dev
 PORT=3000
@@ -7,6 +11,7 @@ BASE_URL=http://localhost:3000
 CORS_ORIGIN=
 APP_KEY_PUBLIC=public123
 APP_KEY_PRIVATE=private456
+
 
 
 # ========================== #
@@ -38,6 +43,10 @@ CACHE_APOLLO_ENABLE=false
 CACHE_EXPRESS_ENABLE=true
 CACHE_EXPRESS_DEBUG=false
 
+# API_SELF
+CACHE_APISELF_ENABLE=false
+CACHE_APISELF_HOURS=3
+
 
 
 # ========================== #
@@ -56,18 +65,16 @@ NODEMAILER_PASS=ed323ed44d7870
 NEXMO_KEY_PUBLIC=
 NEXMO_KEY_PRIVATE=
 
+# ASSETS
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_KEY_API=
+CLOUDINARY_KEY_SECRET=
 
-# ========================= #
-# ======== STORAGE ======== #
-# ========================= #
-
-# DROPBOX
-DBX_KEY_API=
-
-# AMAZON
-S3_ID=AKIA225TBTOKLNBH2OYF
-S3_KEY=y6hrC9i3TI+R3y399TZRHhnocqh3cgrvRWjoho+s
+# STORAGE
+S3_KEY_PUBLIC=AKIA225TBTOKLNBH2OYF
+S3_KEY_PRIVATE=y6hrC9i3TI+R3y399TZRHhnocqh3cgrvRWjoho+s
 S3_BUCKET=MyBucket
 S3_REGION=us-east-2
 
+DBX_KEY_API=
 
