--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "tsx watch test"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@apollo/server": "^4.3.0",
     "@apollo/server-plugin-response-cache": "^4.1.0",
     "@apollo/utils.keyvadapter": "^2.0.0",
@@ -18,8 +19,12 @@
     "@keyv/redis": "^2.5.4",
     "@prisma/client": "^4.8.1",
     "@sendgrid/mail": "^7.7.0",
+    "D": "^1.0.0",
     "apicache": "^1.6.3",
+    "async-retry": "^1.3.3",
+    "aws-sdk": "^2.1313.0",
     "axios": "^1.2.2",
+    "axios-extensions": "^3.1.6",
     "basic-auth": "^2.0.1",
     "bcrypt": "^5.1.0",
     "bluebird": "^3.7.2",
@@ -27,6 +32,7 @@
     "bson-objectid": "^2.0.4",
     "chance": "^1.1.9",
     "cheerio": "^1.0.0-rc.12",
+    "cloudinary": "^1.34.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
@@ -60,19 +66,23 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.0.1",
     "nexmo": "^2.9.1",
+    "p-retry": "^5.1.2",
     "parse-domain": "^7.0.1",
     "path": "^0.12.7",
     "promise": "^8.3.0",
+    "promise-retry": "^2.0.1",
     "psl": "^1.9.0",
     "q": "^1.5.1",
     "qs": "^6.11.0",
     "query-string": "7.1.3",
     "querystring": "^0.2.1",
+    "quick-lru": "^6.1.1",
     "ramda": "^0.28.0",
     "random": "^4.1.0",
     "randomatic": "^3.1.1",
     "redis": "3.1.2",
     "reflect-metadata": "^0.1.13",
+    "retry": "^0.13.1",
     "serve-favicon": "^2.5.0",
     "sqlite3": "^5.1.4",
     "stream": "^0.0.2",
@@ -97,6 +107,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.20.11",
     "@types/apicache": "^1.6.1",
+    "@types/async-retry": "^1.4.5",
     "@types/basic-auth": "^1.1.3",
     "@types/bcrypt": "^5.0.0",
     "@types/bluebird": "^3.5.38",
@@ -117,6 +128,7 @@
     "@types/ms": "^0.7.31",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.7",
+    "@types/promise-retry": "^1.1.3",
     "@types/psl": "^1.1.0",
     "@types/q": "^1.5.5",
     "@types/ramda": "^0.28.20",
