--- a/.env
+++ b/.env
@@ -54,7 +54,7 @@ CACHE_APISELF_HOURS=3
 # ========================== #
 
 # EMAIL
-SGM_KEY_API=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
+SGM_KEY_TOKEN=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
 
 NODEMAILER_HOST=smtp.mailtrap.io
 NODEMAILER_PORT=465
@@ -67,8 +67,8 @@ NEXMO_KEY_PRIVATE=
 
 # ASSETS
 CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_KEY_API=
-CLOUDINARY_KEY_SECRET=
+CLOUDINARY_KEY_PUBLIC=
+CLOUDINARY_KEY_PRIVATE=
 
 # STORAGE
 S3_KEY_PUBLIC=AKIA225TBTOKLNBH2OYF
@@ -76,5 +76,5 @@ S3_KEY_PRIVATE=y6hrC9i3TI+R3y399TZRHhnocqh3cgrvRWjoho+s
 S3_BUCKET=MyBucket
 S3_REGION=us-east-2
 
-DBX_KEY_API=
+DBX_KEY_TOKEN=
 
