--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios-extensions": "^3.1.6",
     "basic-auth": "^2.0.1",
     "bcrypt": "^5.1.0",
+    "blob": "^0.1.0",
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.1",
     "bson-objectid": "^2.0.4",
