--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express-dart-sass": "^1.0.4",
     "express-jwt": "^8.3.0",
     "express-validator": "^6.14.2",
+    "fetch-retry": "^5.0.3",
     "formidable": "^2.1.1",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.1.0",
