--- a/.env
+++ b/.env
@@ -5,20 +5,24 @@
 # SERVER
 NODE_ENV=dev
 PORT=3000
-BASE_URL=http://localhost:3000
 
 # SECURITY
 CORS_ORIGIN=
 APP_KEY_PUBLIC=public123
 APP_KEY_PRIVATE=private456
 
+# CACHE
+CACHE_APOLLO_ENABLE=false
+CACHE_EXPRESS_ENABLE=true
+CACHE_EXPRESS_DEBUG=false
 
 
-# ========================== #
-# ======== DATABASE ======== #
-# ========================== #
 
-# RELATIONAL
+# ====================== #
+# ======== DATA ======== #
+# ====================== #
+
+# MYSQL
 DATABASE_USER=admin
 DATABASE_PASS=123456
 DATABASE_HOST=localhost
@@ -26,26 +30,27 @@ DATABASE_PORT=3306
 DATABASE_NAME=backend
 DATABASE_DEBUG=false
 
-# JSON
+# MONGO
 DB_URL=mongodb://localhost:27017/backend
-
-
-
-# ======================= #
-# ======== CACHE ======== #
-# ======================= #
 
 # REDIS
 REDIS_URL=redis://localhost:6379/0
 
-# CACHE
-CACHE_APOLLO_ENABLE=false
-CACHE_EXPRESS_ENABLE=true
-CACHE_EXPRESS_DEBUG=false
 
-# API_SELF
-CACHE_APISELF_ENABLE=false
-CACHE_APISELF_HOURS=3
+
+# ===================== #
+# ======== API ======== #
+# ===================== #
+
+# SELF
+API_SELF_BASE_URL=http://localhost:3000
+API_SELF_CACHE_ENABLE=false
+API_SELF_CACHE_HOURS=3
+
+# TEST
+API_SELF_BASE_URL=https://jsonplaceholder.typicode.com
+API_TEST_CACHE_ENABLE=false
+API_TEST_CACHE_HOURS=3
 
 
 
@@ -65,6 +70,12 @@ NODEMAILER_PASS=ed323ed44d7870
 NEXMO_KEY_PUBLIC=
 NEXMO_KEY_PRIVATE=
 
+
+
+# ======================= #
+# ======== FILES ======== #
+# ======================= #
+
 # ASSETS
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_KEY_PUBLIC=
@@ -77,3 +88,5 @@ S3_REGION=us-east-2
 S3_BUCKET=MyBucket
 
 DBX_KEY_TOKEN=
+
+
