--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "apicache": "^1.6.3",
     "async-retry": "^1.3.3",
     "aws-sdk": "^2.1313.0",
-    "axios": "^1.2.2",
+    "axios": "0.27.2",
     "axios-extensions": "^3.1.6",
     "basic-auth": "^2.0.1",
     "bcrypt": "^5.1.0",
@@ -93,7 +93,7 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
     "tsx": "^3.12.2",
-    "type-fest": "^3.5.2",
+    "type-fest": "^3.5.7",
     "uid": "^2.0.1",
     "underscore": "^1.13.6",
     "universal-cookie-express": "^4.0.3",
