--- a/.env
+++ b/.env
@@ -34,7 +34,7 @@ DATABASE_DEBUG=false
 DB_URL=mongodb://localhost:27017/backend
 
 # REDIS
-REDIS_URL=redis://localhost:6379/0
+REDIS_BASE_URL=redis://localhost:6379/0
 
 
 
