--- a/.env
+++ b/.env
@@ -23,6 +23,7 @@ CACHE_EXPRESS_DEBUG=false
 # ====================== #
 
 # MYSQL
+DATABASE_URL=mysql://admin:123456@localhost:3306/backend
 DATABASE_USER=admin
 DATABASE_PASS=123456
 DATABASE_HOST=localhost
@@ -34,7 +35,7 @@ DATABASE_DEBUG=false
 DB_URL=mongodb://localhost:27017/backend
 
 # REDIS
-REDIS_BASE_URL=redis://localhost:6379/0
+REDIS_BASE_URL=redis://localhost:6379
 
 
 
