--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "backend default boilerplate",
   "author": "Jose Henrique",
   "main": "index.ts",
@@ -39,6 +39,10 @@
     "diacritics": "^1.3.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
+    "emittery": "^1.0.1",
+    "eventemitter2": "^6.4.9",
+    "eventemitter3": "^5.0.0",
+    "events": "^3.3.0",
     "express": "^4.18.2",
     "express-bearer-token": "^2.4.0",
     "express-dart-sass": "^1.0.4",
